# obratka-public

./: .gitignore  README.md
services/llm-pipeline/: .dockerignore  .env.example  .env.worker.example  .gitignore  CLAUDE.md  Dockerfile.worker  LLM_PYTHON_QUICKSTART.md  README.md  deploy-operations.md  docker-compose.yml  llm_contracts_changed.md  pyproject.toml
services/llm-pipeline/docs/: pricing.md
services/llm-pipeline/src/obratka/: __init__.py  analyze_reviews.py  config.py  logging_setup.py  orchestrator.py  runner.py
services/llm-pipeline/src/obratka/io/: loaders.py
services/llm-pipeline/src/obratka/llm/: client.py  retry.py  schemas.py
services/llm-pipeline/src/obratka/observability/: __init__.py  phoenix_setup.py  seq_sink.py  spans.py
services/llm-pipeline/src/obratka/steps/: step05_translate.py  step0_normalize.py  step21_cluster.py  step22_reclassify.py  step2_topics.py  step3_kpi.py  step4_recommend.py
services/llm-pipeline/src/obratka/utils/: hashing.py  lang.py  topics.py  weighting.py
services/llm-pipeline/src/obratka/web/: __init__.py  contract.py  qa.py  s3.py  state.py  status_api.py  (+1 more)
services/llm-pipeline/tasks/: 00_logging.md  01_async_orchestrator.md  02_step0_normalization.md  03_step05_translation.md  04_step1_fake_detection.md  05_step2_topics_sentiment.md  06_step22_reclassification.md  07_step21_topic_clustering.md  08_step3_kpi_aggregation.md  09_step4_recommendations.md  10_database_schema.md  11_config_and_env.md  12_addons_phoenix_report_artifacts_weighting.md  LLM_PYTHON_QUICKSTART.md  codex_reviews_analysis_requirements.md
(+505 files in other folders)
