[tool.poetry]
name = "obratka"
version = "0.1.0"
description = "LLM-пайплайн анализа отзывов"
authors = ["Artem Kuznetsov <kuzartem15@gmail.com>"]
readme = "README.md"
packages = [{ include = "obratka", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7"
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
aiohttp = "^3.9"
openai = "^1.40"
instructor = "^1.5"
tenacity = "^8.3"
asyncio-throttle = "^1.0"
langdetect = "^1.0.9"
jinja2 = "^3.1"
pandas = "^2.2"
arize-phoenix = "^5.0"
arize-phoenix-otel = "^0.6"
openinference-instrumentation-openai = "^0.1"
opentelemetry-api = "^1.27"
opentelemetry-sdk = "^1.27"
opentelemetry-exporter-otlp = "^1.27"
aio-pika = "^9.4"
boto3 = "^1.34"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.27" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"

[tool.poetry.scripts]
obratka = "obratka.analyze_reviews:main"
analyze-reviews = "obratka.analyze_reviews:main"
obratka-worker = "obratka.web.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
